<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather.YAMBLZ</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_weather">Weather</string>
    <string name="version">Version: %s</string>
    <string name="pressure">%s hPa\nPressure</string>
    <string name="humidity">%s %%\nHumidity</string>
    <string name="visibility">%s km\nVisibility</string>
    <string name="wind">Wind speed: %s m/s</string>

    <string name="manually">Manually</string>
    <string name="fifteen_min">15 min</string>
    <string name="thirteen_min">30 min</string>
    <string name="one_hour">1 hour</string>
    <string name="three_hour">3 hour</string>

    <string name="update_time">Update time</string>
    <string name="temperature">Temperature</string>
    <string name="city">City</string>
    <string name="moscow">Moscow</string>
    <string name="moscow_full">Moscow, Russia</string>

    <string name="error_play_services_not_available">Google Play Services is not available: %1$s</string>

</resources>